--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="/build/scripts/application.js"></script>
     <script src="/build/scripts/templates.js"></script>
 
-    <link href="styles/main.css" rel="stylesheet">
+    <link href="/build/styles/main.css" rel="stylesheet">
 
 </head>
 
