--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="/venders/jquery/dist/jquery.js"></script>
     <script src="/venders/handlebars/handlebars.js"></script>
     <script src="/venders/ember/ember.js"></script>
+    <script src="/venders/wookmark-jquery/jquery.wookmark.js"></script>
     <script src="/build/scripts/application.js"></script>
     <script src="/build/scripts/templates.js"></script>
 
