--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>Web Reddit</title>
-    <meta charset="UTF-8">
+    <head>
+        <title>Web Reddit</title>
+        <meta charset="UTF-8">
+        <script src="/dist/application.min.js"></script>
+        <link href="/build/styles/main.css" rel="stylesheet">
+    </head>
 
-    <script src="/venders/jquery/dist/jquery.js"></script>
-    <script src="/venders/ember/ember-template-compiler.js"></script>
-    <script src="/venders/ember/ember.debug.js"></script>
-    <script src="/venders/wookmark-jquery/jquery.wookmark.js"></script>
-    <script src="/build/scripts/application.js"></script>
-    <script src="/build/scripts/templates.js"></script>
-
-    <link href="/build/styles/main.css" rel="stylesheet">
-
-</head>
-
-<body></body>
+    <body></body>
 
 </html>
